# lecture-notes

./: .gitignore  AGENTS.md  LICENSE  README.en.md  README.md  lecture-notes.toml  main.py  pyproject.toml
lecture_notes/: __init__.py  cli.py  pipeline.py  prompts.py
lecturebot/: __init__.py  cli.py  pipeline.py  prompts.py
tests/: test_cli.py  test_pipeline.py
