[project]
name = "lecturebot"
version = "0.1.0"
description = "CLI tool to turn lecture transcript txt files into summarized markdown."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
]

[project.scripts]
lecturebot = "lecturebot.cli:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"
